# enturclient

./: LICENSE  README.md  pylintrc  pyproject.toml  requirements.txt  setup.py
azure-pipelines/: ci.yaml  pr.yaml
azure-pipelines/templates/: init-step.yaml  pytest.yaml
enturclient/: __init__.py  api.py  consts.py  dto.py  queries.py
enturclient/dto/: __init__.py  estimated_call.py  place.py
tests/dto/: test_estimated_call.py  test_place.py
