[tool.poetry]
name = "enturclient"
version = "0.2.2"
description = "An API client for public transport data from Entur."
authors = ["Heine Furubotten <hfurubotten@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hfurubotten/enturclient"
repository = "https://github.com/hfurubotten/enturclient"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
include = [
    { path = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
async_timeout = "^3.0.1"

[tool.poetry.dev-dependencies]
asynctest = "^0.13.0"
black = "^21.8b0"
isort = "^5.8.0"
mypy = "^0.902"
pylint = "^2.8.3"
pydocstyle = "^6.0.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py38"]
