[tool.poetry]
name = "enturclient"
version = "0.2.4"
description = "An API client for public transport data from Entur."
authors = ["Heine Furubotten <hfurubotten@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hfurubotten/enturclient"
repository = "https://github.com/hfurubotten/enturclient"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
include = [
    { path = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
async_timeout = ">=3.0.1,<5.0"

[tool.poetry.dev-dependencies]
asynctest = "^0.13.0"
black = "^22.10"
isort = "^5.10.1"
mypy = "^0.971"
pylint = "^2.14.5"
pydocstyle = "^6.0.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py38"]
